tests/front_end/input/variable_use_analysis/errors/function_not_found.wl
//E<3:12>: Function `call` not found
int main() {
    return call();
}
